--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body
 }
 .box
 {
-    width: 300px;
-    padding: 20px;
+    width: 350px;
+    padding: 25px;
     background-color: white;
     border-radius: 15px;
     display: flex;
@@ -32,12 +32,15 @@ body
     padding: 5px;
     border-radius: 3px;
     width: 20%;
+    border: thin;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     margin-top : 15px;
     margin-bottom: 15px;
     font-weight: bold;
+    margin-top: 20px;
+
 }
 div p
 {
@@ -59,6 +62,7 @@ div h6
 }
 .user
 {
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
     padding: 5px;
